Fix interstitial button alignment in Safari.

--- a/r2/r2/public/static/css/components/mixins.less
+++ b/r2/r2/public/static/css/components/mixins.less
@@ -89,6 +89,11 @@
     align-items: @props;
 }
 
+.justify-content(@props) {
+    -webkit-justify-content: @props;
+    justify-content: @props;
+}
+
 .clearfix() {
     &:before,
     &:after {
