--- a/r2/r2/public/static/css/interstitial.less
+++ b/r2/r2/public/static/css/interstitial.less
@@ -46,7 +46,7 @@
 
 .interstitial .buttons {
   .display-flex();
-  justify-content: center;
+  .justify-content(center);
   margin-left: auto;
   margin-right: auto;
   margin-top: @margin-xx-large * 1px;
